2007-08-11  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: Work in progress.

2007-08-09  Don Allingham  <don@gramps-project.org>
	* GrampsDbUtils/_WriteGedcom.py: use utf8 encoding only
	* GrampsDbUtils/gedcomexport.glade:  use utf8 encoding only

2007-08-09  Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_PrivateProxyDb.py: Continued work.

2007-08-08  Don Allingham  <don@gramps-project.org>
	* src/Exporter.py: remove GRDB export
	* src/GrampsDbUtils/_WriteGedcom.py: write NOTE instances as references
	instead of inline. This will allow notes to be shared in the future. Handle
	CONC/CONT in a cleaner manner.

2007-08-08  Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_PrivateProxyDb.py: Initial commit - not done yet.

2007-08-07  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: additional refactoring

2007-08-05  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: start of refactoring
	* src/Bookmarks.py: Don't rewrite list

2007-08-04  Stephane Charette <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: use _dd.display() to format the date
	used in the string "Generated by Gramps on <...>"

2007-08-02  Brian Matherly <brian@gramps-project.org>
	* src/plugins/EndOfLineReport.py: Remove relationships and places

2007-08-01  Brian Matherly <brian@gramps-project.org>
	* src/plugins/IndivComplete.py: Reset bibliography between people.

2007-08-01  Brian Matherly <brian@gramps-project.org>
	* src/plugins/EndOfLineReport.py: Add generations and relationships
	
2007-07-31  Jérôme <romjerome@yahoo.fr>
	* src/GrampsDbUtils/gedcomexport.glade: use UTF-8 instead of UNICODE

2007-07-30  Don Allingham  <don@gramps-project.org>
	* src/DbLoader.py (DbLoader.do_import): catch unicode encoding errors

2007-07-30  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: assign inline note to the referencing object